force-app/src/objects/EventApi__Ticket_Type__c.object
<CustomObject>
    <description>Tracks the various types of Tickets available for a Event.</description>
    <fields>
        <fullName>EventApi__AR_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the GL Account used for A/R transactions.</description>
        <inlineHelpText>Identifies the GL Account used for A/R transactions.</inlineHelpText>
        <label>A/R Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Ticket Types (A/R Account)</relationshipLabel>
        <relationshipName>TicketTypes_AR_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Adjustment_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The debit account to use when posting invoice adjustments to invoices that have already posted to A/R.</description>
        <inlineHelpText>The debit account to use when posting invoice adjustments to invoices that have already posted to A/R.</inlineHelpText>
        <label>Adjustment Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Ticket Types (Adjustment Account)</relationshipLabel>
        <relationshipName>Adjustment_Account_Ticket_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Cost__c</fullName>
        <description>The cost of the Ticket Type will be used to calculate the Tax-deductible donation amount that displays to on the Attendees receipt if &quot;Is Tax Deductible&quot; is checked.</description>
        <inlineHelpText>The cost of the Ticket Type will be used to calculate the Tax-deductible donation amount that displays to on the Attendees receipt if &quot;Is Tax Deductible&quot; is checked.</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Defer_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the deferred revenue recognition rules will be considered when posting transactions.</description>
        <inlineHelpText>When checked, the deferred revenue recognition rules will be considered when posting transactions.</inlineHelpText>
        <label>Defer Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Deferred_Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deferred Revenue Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Deferred Revenue Account)</relationshipLabel>
        <relationshipName>ItemsDRA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Deferred_Revenue_Term__c</fullName>
        <label>Deferred Revenue Term (In Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Description__c</fullName>
        <description>Displays with the ticket type on the registration page.</description>
        <inlineHelpText>Displays with the ticket type on the registration page.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Discount_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to debit when discounting a sale related to the Item.</description>
        <inlineHelpText>The account to debit when discounting a sale related to the Item.</inlineHelpText>
        <label>RESERVED</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Ticket Types (Discount Account)</relationshipLabel>
        <relationshipName>Discount_Account_Ticket_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Display_Available_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, if a ticket quantity is specified, the number of tickets remaining will be shown next to the ticket type.</description>
        <inlineHelpText>When checked, if a ticket quantity is specified, the number of tickets remaining will be shown next to the ticket type.</inlineHelpText>
        <label>Display Available Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Early_Bird_End_Date__c</fullName>
        <description>Requires &quot;Enable Early Bird Price&quot; to be checked. Specifies the date that early bird pricing ends.</description>
        <inlineHelpText>Requires &quot;Enable Early Bird Price&quot; to be checked. Specifies the date that early bird pricing ends.</inlineHelpText>
        <label>Early Bird End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__Early_Bird_Price__c</fullName>
        <description>Requires &quot;Enable Early Bird Price&quot; to be checked. Specifies the date that early bird pricing ends.</description>
        <inlineHelpText>Requires &quot;Enable Early Bird Price&quot; to be checked. Specifies the date that early bird pricing ends..</inlineHelpText>
        <label>Early Bird Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</description>
        <inlineHelpText>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Assignments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>** System Calculated ** When checked, the Item can be assigned to Contacts indicating benefit or ownership over goods and services. Automatically calculated based on the parent Item Class &quot;Type&quot;.</description>
        <inlineHelpText>** System Calculated ** When checked, the Item can be assigned to Contacts indicating benefit or ownership over goods and services. Automatically calculated based on the parent Item Class &quot;Type&quot;.</inlineHelpText>
        <label>SYSTEM (ALWAYS TRUE FOR TICKET TYPE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Early_Bird_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Ticket Type will be sold for the amount defined in the &quot;Early Bird Price&quot; field until the date defined in the &quot;Early Bird End Date&quot;.</description>
        <inlineHelpText>When checked, the Ticket Type will be sold for the amount defined in the &quot;Early Bird Price&quot; field until the date defined in the &quot;Early Bird End Date&quot;.</inlineHelpText>
        <label>Enable Early Bird Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Onsite_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the ticket type can be sold for a different price, defined in the &quot;On-Site Price&quot; field, on the day of the event.</description>
        <inlineHelpText>When checked, the ticket type can be sold for a different price, defined in the &quot;On-Site Price&quot; field, on the day of the event.</inlineHelpText>
        <label>Enable On-site Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Refund_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, an attendee can request a refund and the attendee record will be updated to indicate he/she has cancelled.</description>
        <inlineHelpText>When checked, an attendee can request a refund and the attendee record will be updated to indicate he/she has cancelled.</inlineHelpText>
        <label>Enable Refund Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, attendees will have the option to be added to a waitlist for this ticket type when it is sold out.</description>
        <inlineHelpText>When checked, attendees will have the option to be added to a waitlist for this ticket type when it is sold out.</inlineHelpText>
        <label>Enable Waitlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Event_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related event category. When linked, this ticket type will be included automatically in new events created within the same category.</description>
        <inlineHelpText>Link to the related event category. When linked, this ticket type will be included automatically in new events created within the same category.</inlineHelpText>
        <label>Event Category</label>
        <referenceTo>EventApi__Event_Category__c</referenceTo>
        <relationshipLabel>Ticket Types (Template)</relationshipLabel>
        <relationshipName>Ticket_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Event.</description>
        <inlineHelpText>Link to related Event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Ticket Types</relationshipLabel>
        <relationshipName>Ticket_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Flex_Day_of_the_Month__c</fullName>
        <label>Flex Day of the Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to a form created in the &quot;Form Builder&quot; app. Customers will see the form when they select the ticket type.</description>
        <inlineHelpText>Link to a form created in the &quot;Form Builder&quot; app. Customers will see the form when they select the ticket type.</inlineHelpText>
        <label>Ticket Type Form</label>
        <referenceTo>PagesApi__Form__c</referenceTo>
        <relationshipLabel>Ticket Types</relationshipLabel>
        <relationshipName>Ticket_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Group_Type__c</fullName>
        <description>The value of this field will be matched to the related item&apos;s &quot;Item Weight UOM&quot; field.</description>
        <inlineHelpText>The value of this field will be matched to the related item&apos;s &quot;Item Weight UOM&quot; field.</inlineHelpText>
        <label>Group Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Image_Path__c</fullName>
        <defaultValue>&quot;https://s3.us-east-1.amazonaws.com/fonteva-customer-media/00D1U000000FLVyUAO/WcRwRzNr_placeholder_svg&quot;</defaultValue>
        <description>Image displays in the shopping cart and checkout page.</description>
        <inlineHelpText>Image displays in the shopping cart and checkout page.</inlineHelpText>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Income_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The credit account to use when posting revenue in a A/R transaction or from a cash sale receipt.</description>
        <inlineHelpText>The credit account to use when posting revenue in a A/R transaction or from a cash sale receipt.</inlineHelpText>
        <label>Income Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Ticket Types</relationshipLabel>
        <relationshipName>Ticket_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Interview_Form_Display_Label__c</fullName>
        <description>Text heading for the ticket type form.</description>
        <inlineHelpText>Text heading for the ticket type form.</inlineHelpText>
        <label>Form Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Inventory_Status__c</fullName>
        <description>** System Calculated ** The current inventory status. Default is &quot;In-stock&quot;.</description>
        <inlineHelpText>** System Calculated ** The current inventory status. Default is &quot;In-stock&quot;.</inlineHelpText>
        <label>RESERVED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-stock</fullName>
                    <default>true</default>
                    <label>In-stock</label>
                </value>
                <value>
                    <fullName>Sold Out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Invoice_Payment_Priority__c</fullName>
        <description>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</description>
        <inlineHelpText>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</inlineHelpText>
        <label>Payment Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, ticket is available for sale but must still be published to be visible on the registration page.</description>
        <inlineHelpText>When checked, ticket is available for sale but must still be published to be visible on the registration page.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Contribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable contribution (donation) related controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Enable contribution (donation) related controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</inlineHelpText>
        <label>Is Contribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Group_Ticket_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the ability to assign multiple attendees to a single ticket will be enabled.</description>
        <inlineHelpText>When checked, the ability to assign multiple attendees to a single ticket will be enabled.</inlineHelpText>
        <label>Is Group Ticket Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, ticket is visible and available for purchase on the registration page to contacts with access permissions.</description>
        <inlineHelpText>When checked, ticket is visible and available for purchase on the registration page to contacts with access permissions.</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Tax_Deductible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Ticket Type is considered as a Tax Deductible contribution and the Cost of the Ticket Type will be used when deriving the &quot;Tax Deductible Donation Amount&quot; on Attendee&apos;s Receipts. Defaults unchecked.</description>
        <inlineHelpText>When checked, the Ticket Type is considered as a Tax Deductible contribution and the Cost of the Ticket Type will be used when deriving the &quot;Tax Deductible Donation Amount&quot; on Attendee&apos;s Receipts. Defaults unchecked.</inlineHelpText>
        <label>Is Tax Deductible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable tax specific controls and features for this ticket.</description>
        <inlineHelpText>** System Calculated Override ** Enable tax specific controls and features for this ticket.</inlineHelpText>
        <label>Is Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SYSTEM</description>
        <inlineHelpText>SYSTEM</inlineHelpText>
        <label>SYSTEM</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Ticket Types</relationshipLabel>
        <relationshipName>Ticket_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Item_Cost__c</fullName>
        <description>The cost per unit for the item.</description>
        <inlineHelpText>The cost per unit for the item.</inlineHelpText>
        <label>Item Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SYSTEM</description>
        <inlineHelpText>SYSTEM</inlineHelpText>
        <label>SYSTEM</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>SYSTEM</relationshipLabel>
        <relationshipName>Ticket_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Line_Description__c</fullName>
        <description>The description for the item as it should appear on related receipts and invoices. This field is limited to 255 characters.</description>
        <inlineHelpText>The description for the item as it should appear on related receipts and invoices. This field is limited to 255 characters.</inlineHelpText>
        <label>RESERVED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Manage_Agenda_by_Ticket_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field will allow staff users to manage scheduled items by ticket type. The settings from the session will be overridden with the settings defined on the Ticket Type Scheduled Item.</description>
        <inlineHelpText>Checking this field will allow staff users to manage scheduled items by ticket type. The settings from the session will be overridden with the settings defined on the Ticket Type Scheduled Item.</inlineHelpText>
        <label>Manage Agenda by Ticket Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Maximum_Number_of_Assignments__c</fullName>
        <description>**Conditionally Required** Defines the maximum number of attendees allowed per group. Field is required when &quot;Is Group Ticket Type&quot; field is set to true.</description>
        <inlineHelpText>**Conditionally Required** Defines the maximum number of attendees allowed per group. Field is required when &quot;Is Group Ticket Type&quot; field is set to true.</inlineHelpText>
        <label>Maximum Attendees Allowed Per Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Maximum_Sales_Quantity__c</fullName>
        <description>Requires &quot;Restrict Maximum Sales Quantity&quot; to be checked. Specifies the maximum quantity of tickets that can be purchased in a single order.</description>
        <inlineHelpText>Requires &quot;Restrict Maximum Sales Quantity&quot; to be checked. Specifies the maximum quantity of tickets that can be purchased in a single order.</inlineHelpText>
        <label>Maximum Sales Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Min_Sales_Quantity__c</fullName>
        <description>Specifies the minimum quantity of tickets that can be purchased in a single order.</description>
        <inlineHelpText>Specifies the minimum quantity of tickets that can be purchased in a single order.</inlineHelpText>
        <label>Minimum Sales Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Minimum_Sales_Quantity__c</fullName>
        <description>The minimum quantity allowed per sale. Required and restricted when &quot;Require a Minimum Sales Quantity&quot;</description>
        <inlineHelpText>The minimum quantity allowed per sale. Required and restricted when &quot;Require a Minimum Sales Quantity&quot;</inlineHelpText>
        <label>SYSTEM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Onsite_Price__c</fullName>
        <description>Requires &quot;Enable On-Site Price&quot; to be checked. Specifies the ticket price on the day of the event.</description>
        <inlineHelpText>Requires &quot;Enable On-Site Price&quot; to be checked. Specifies the ticket price on the day of the event.</inlineHelpText>
        <label>On-site Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Price__c</fullName>
        <description>The standard or list price of the ticket.</description>
        <inlineHelpText>The standard or list price of the ticket.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Quantity_Available__c</fullName>
        <description>Maximum number of this ticket type that can be sold for the event. Required if &quot;Enable Waitlist&quot; is checked.</description>
        <inlineHelpText>Maximum number of this ticket type that can be sold for the event. Required if &quot;Enable Waitlist&quot; is checked.</inlineHelpText>
        <label>Ticket Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Quantity_Remaining__c</fullName>
        <description>The ticket type quantity minus the tickets sold.</description>
        <formula>IF(EventApi__Quantity_Available__c &gt; EventApi__Quantity_Sold__c, EventApi__Quantity_Available__c - EventApi__Quantity_Sold__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The ticket type quantity minus the tickets sold.</inlineHelpText>
        <label>Tickets Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Quantity_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of tickets of this type sold.</description>
        <inlineHelpText>The number of tickets of this type sold.</inlineHelpText>
        <label>Tickets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Refund_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to debit when refunding/crediting customers who have purchased this Item.</description>
        <inlineHelpText>The account to debit when refunding/crediting customers who have purchased this Item.</inlineHelpText>
        <label>Refund Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Ticket Types (Refund Account)</relationshipLabel>
        <relationshipName>Refund_Account_Ticket_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Refund_Request_Policy__c</fullName>
        <description>Enter rich text to display to the attendee when they request refunds from the Manage My Registration page.</description>
        <inlineHelpText>Enter rich text to display to the attendee when they request refunds from the Manage My Registration page.</inlineHelpText>
        <label>Refund Request Policy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Require_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, a user will be unable to complete a sale for an Item until all assignments available have been entered. Defaults unchecked.</description>
        <inlineHelpText>When checked, a user will be unable to complete a sale for an Item until all assignments available have been entered. Defaults unchecked.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Require_Minimum_Quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restrict customers to a maximum quantity required per sale. Defaults unchecked.</description>
        <inlineHelpText>Restrict customers to a minimum quantity required per sale. Defaults unchecked.</inlineHelpText>
        <label>Require Minimum Sales Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Restrict_Maximum_Sales_Quantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, restricts customers to a maximum quantity of tickets per order.</description>
        <inlineHelpText>When checked, restricts customers to a maximum quantity of tickets per order.</inlineHelpText>
        <label>Restrict Maximum Sales Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Restrict_Number_of_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will limit the number of assignments allowed based on the value of the &quot;Maximum Number of Assignments&quot; field. Defaults unchecked.</description>
        <inlineHelpText>When checked, the system will limit the number of assignments allowed based on the value of the &quot;Maximum Number of Assignments&quot; field. Defaults unchecked.</inlineHelpText>
        <label>SYSTEM (ALWAYS TRUE FOR TICKET TYPE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Revenue_Recognition_Date__c</fullName>
        <label>Revenue Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__Revenue_Recognition_Rule__c</fullName>
        <label>Revenue Recognition Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Over Time</fullName>
                </value>
                <value>
                    <fullName>Specific Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Revenue_Recognition_Term_Rule__c</fullName>
        <label>Revenue Recognition Term Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Partial Credit</fullName>
                </value>
                <value>
                    <fullName>Flex Day</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__SKU__c</fullName>
        <description>A SKU (Stock Keeping Unit) is a unique Item identifier that references attributes associated with the Item and that distinguish it from all other Items primarily used for inventory control and management.</description>
        <inlineHelpText>A SKU (Stock Keeping Unit) is a unique Item identifier that references attributes associated with the Item and that distinguish it from all other Items primarily used for inventory control and management.</inlineHelpText>
        <label>RESERVED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Tax_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate this field for an item that needs to apply a tax.</description>
        <inlineHelpText>Populate this field for an item that needs to apply a tax.</inlineHelpText>
        <label>Tax Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Tax Tickets</relationshipLabel>
        <relationshipName>Tax_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Block__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Ticket Block used for inventory tracking purposes.</description>
        <inlineHelpText>Link to related Ticket Block used for inventory tracking purposes.</inlineHelpText>
        <label>Ticket Block</label>
        <referenceTo>EventApi__Ticket_Block__c</referenceTo>
        <relationshipLabel>Ticket Types</relationshipLabel>
        <relationshipName>Ticket_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Ticket_Information__c</fullName>
        <description>Rich text to display to the attendee of any relevant event and ticket information.</description>
        <inlineHelpText>Rich text to display to the attendee of any relevant event and ticket information.</inlineHelpText>
        <label>Ticket Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__UOM__c</fullName>
        <description>** Required ** Pick the unit of measure to display on registration pages.</description>
        <inlineHelpText>** Required ** Pick the unit of measure to display on registration pages.</inlineHelpText>
        <label>RESERVED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registration</fullName>
                    <color>#0B6FCE</color>
                    <default>true</default>
                    <label>Registration</label>
                </value>
                <value>
                    <fullName>Ticket</fullName>
                    <color>#78C953</color>
                    <label>Ticket</label>
                </value>
                <value>
                    <fullName>Seat</fullName>
                    <color>#E27001</color>
                    <label>Seat</label>
                </value>
                <value>
                    <fullName>Table</fullName>
                    <color>#A845DC</color>
                    <label>Table</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#F3D904</color>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OneClick__Is_Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROEApi__Event_Display_Name__c</fullName>
        <description>**System Calculated** Event Display Name</description>
        <inlineHelpText>**System Calculated** Event Display Name</inlineHelpText>
        <label>SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROEApi__Event_Duration_Text__c</fullName>
        <description>**System Calculated** Event Duration Text</description>
        <formula>EventApi__Event__r.ROEApi__Event_Duration_Text__c</formula>
        <inlineHelpText>**System Calculated** Event Duration Text</inlineHelpText>
        <label>SYSTEM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROEApi__Event_Name__c</fullName>
        <description>**System Calculated** Event Display Name</description>
        <formula>EventApi__Event__r.EventApi__Display_Name__c</formula>
        <inlineHelpText>**System Calculated** Event Display Name</inlineHelpText>
        <label>SYSTEM</label>
        <type>Text</type>
    </fields>
    <label>Ticket Type</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>